# crunum

./: .gitignore  Makefile  Makefile.am  Makefile.in  NOTICE  README  README.md  aclocal.m4  compile  config.h.in  configure  configure.ac  depcomp  libtool  missing
include/: Makefile.am  Makefile.in  common.h  config.h.in  crunum.h  lua.h  lua_bind.h  matrix.h  python.h  python_bind.h  vector.h
pkgconfig/: Makefile.am  Makefile.in  crunum.pc.in
src/: Makefile  Makefile.am  Makefile.in  crunum.c  lua.lua  matrix.c  test.lua  vector.c
src/lua/: Makefile  Makefile.am  Makefile.in  crunum.c  matrix.c  vector.c
src/matrix/: Makefile.am  Makefile.in  matrix_core.c  matrix_math.c
src/python/: Makefile  Makefile.am  Makefile.in  crunum.c  matrix.c  vector.c
src/vector/: Makefile.am  Makefile.in  vector_core.c  vector_math.c
test/: Makefile  matrix.lua  matrix.py  matrix_print.py  test.lua  vector.lua  vector.py
tests/: Makefile.am  Makefile.in  matrix.py  vector.lua  vector.py
tests/lua/: Makefile.am  Makefile.in  matrix.lua
tests/python/: Makefile.am  Makefile.in  matrix.py  vector.py
